--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-6">
                 <ul class="nav-menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home1</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Blog</a></li>
