Add new Structure

--- a/app/index.html
+++ b/app/index.html
@@ -625,7 +625,7 @@
 
             <div class="offset-sm-6 col-sm-6">
                 <div class="text-block">
-                    <div class="text-block__heading">О нас в СМИ</div>
+                    <div class="text-block__heading">О нас в Сми</div>
                     <div class="text-block__delimiter"></div>
                     <div class="text-block__description">
                         <p>We're glad you hand your dental health concerns to our skilled hands. We'll make sure to
@@ -701,7 +701,7 @@
             infinite: true,
             arrows: false,
             speed: 1000,
-//            autoplay: true,
+            autoplay: true,
             autoplaySpeed: 5000
 
         }
