--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,10 @@
             </div>
             <div class="col-md-8">
                 <ul class="nav-menu">
-                    <li><a href="#aboutUs">О НАС</a></li>
+                    <li><a href="massMedia.html">О НАС</a></li>
                     <li><a href="index.html#our-services">Услуги</a></li>
                     <li><a href="index.html#ourTeam">Специалисты</a></li>
-                    <li><a href="trichology.html#trichology">Трихопология</a></li>
+                    <li><a href="trichology.html">Трихопология</a></li>
                     <li><a href="#">Отзывы</a></li>
                     <li><a href="#ourTeam">Контакты</a></li>
                 </ul>
@@ -55,7 +55,7 @@
                     <span class="color_cian font_bold">В области</span>
                     <ul class="about-us__list mt20px">
                         <li><a href="#">Дерматологии</a></li>
-                        <li><a href="trichology.html#trichology">Трихологии</a></li>
+                        <li><a href="trichology.html">Трихологии</a></li>
                         <li><a href="">Косметологии</a></li>
                         <li><a href="">Неврологии</a></li>
                         <li><a href="">Гастроэнтерологии</a></li>
@@ -380,7 +380,7 @@
 
             <div class="service-item col-sm-6">
                 <div class="service-item__icon">
-                    <a href="trichology.html#trichology">
+                    <a href="trichology.html">
                         <img src="images/trichology.svg" alt="">
                     </a>
                 </div>
@@ -611,8 +611,8 @@
 
 </section>
 
-<!--  -->
-<section class="statistic-block">
+<!-- Workers -->
+<!--<section class="statistic-block">
     <div class="container">
         <div class="row">
 
@@ -641,32 +641,34 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 
 
-<!-- Advices and FYI -->
+<!-- Media -->
 <section class="positive-experience">
     <div class="container">
         <div class="row">
 
-            <div class="offset-sm-6 col-sm-6">
+            <div class="col-sm-6 massmdedia-bg"></div>
+            <div class="col-sm-6">
                 <div class="text-block">
                     <div class="text-block__heading">О нас в СМИ</div>
                     <div class="text-block__delimiter"></div>
                     <div class="text-block__description">
-                        <p>We're glad you hand your dental health concerns to our skilled hands. We'll make sure to
-                            deliver
-                            the best possible healthcare to all our patients! Of course, we always complement our main
-                            services with a
-                            customer service oriented approach. We sincerely believe that visiting a dentist shouldn't
-                            be a
-                            frightening or stressful experience! We provide an equally comfortable experience of
-                            relaxation
-                            for all our young and adult customers!</p>
-                        <p>We invite you to explore the information about our dental office on our website! Feel free to
-                            read our terms and conditions and all the additional info we have posted here.</p>
+                        <ul class="article-list">
+                            <li class="article-item">
+                                <a href="massMedia/myCredoMSN.html">Мир–али–Курбан БАЛТАБАЕВ: Мое кредо – доброта и
+                                Отзывчивость</a>
+                            </li>
+                            <li class="article-item">
+                                <a href="#">Чудо исцеления мальчика–«дерева»</a>
+                            </li>
+                            <li class="article-item">
+                                <a href="#">Малика не хочет быть деревом</a>
+                            </li>
+                        </ul>
                     </div>
-                    <button class="text-block__button">More Info</button>
+                    <a href="massMedia.html" class="text-block__button">Больше статей</a>
                 </div>
             </div>
         </div>
@@ -787,7 +789,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p class="indent">Окончила в 1995 году Кыргызский Государственный Медицинский институт, интернатура в 1996 году по
+                <p class="indent">Окончила в 1995 году Кыргызский Государственный Медицинский институт, интернатура в
+                    1996 году по
                     специальности врач общей практики. В 2005 году первичная специализация по дерматовенерологии ФУВ
                     КГМИпиПК. 2009 год специализация по косметологии, в 2016 году специализация по мезотерапии и
                     ботулинотерапии. В 2017 специализация по контурной пластике на базе ФУВ КГМИПиПК. Опыт работы более
@@ -809,7 +812,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p class="indent">В 2017 году окончила Кыргызско-Российский Славянский Университет по специальности «врач-педиатр». С
+                <p class="indent">В 2017 году окончила Кыргызско-Российский Славянский Университет по специальности
+                    «врач-педиатр». С
                     2017 по 2019гг. обучалась в ординатуре на кафедре дерматовенерологии КРСУ по специальности «врач
                     дерматовенеролог». В 2019 г. прошла специализацию по «Дерматокосметологии». Владеет процедурами
                     мезотерапии, пиллинга, рядом косметических процедур по уходу за кожей. В 2020г. прошла обучение по
@@ -834,7 +838,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p class="indent">В 2005г закончила КГМА. В 2007г прошла обучение в ординатуре по специальности «врач невролог» на базе
+                <p class="indent">В 2005г закончила КГМА. В 2007г прошла обучение в ординатуре по специальности «врач
+                    невролог» на базе
                     КГМиПК. В 2007 году курсы по иглорефлексотерапии. В 2015 г прошла специализацию в Южной Корее г.
                     Сеул. Seoul Medical Сenter по «Актуальным вопросам неврологии». С 2007г по настоящее время работает
                     врачом неврологом в отделении неврологии ВОВ НГМЗКР.</p>
