--- a/app/trichology.html
+++ b/app/trichology.html
@@ -75,9 +75,6 @@
             <div class="trichology-carousel">
 
                 <div class="carousel-item">
-                    <div class="col-sm-6 text-block">
-                        <img src="images/trichology/trichoscopy.jpg" alt="Trichology">
-                    </div>
                     <div class="col-sm-6">
                         <div class="text-block ">
                             <div class="text-block__heading font_bold">ТРИХОСКОПИЯ</div>
@@ -104,9 +101,16 @@
 
                         </div>
                     </div>
+                    <div class="col-sm-6 text-block">
+                        <img src="images/trichology/trichoscopy.jpg" alt="Trichology">
+                    </div>
                 </div>
 
+                <div class="delimiter"></div>
                 <div class="carousel-item">
+                    <div class="col-sm-6 text-block">
+                        <img src="images/trichology/trichoscopy2.jpg" alt="Trichology">
+                    </div>
                     <div class="col-sm-6">
                         <div class="text-block ">
                             <div class="text-block__description">
@@ -130,11 +134,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 text-block">
-                        <img src="images/trichology/trichoscopy2.jpg" alt="Trichology">
-                    </div>
                 </div>
-
+                <div class="delimiter"></div>
                 <div class="carousel-item justify-start align-start flex-column">
                     <div class=" d-flex justify-start align-start">
                         <div class="col-sm-6 text-block">
@@ -179,13 +180,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex justify-center w100pr">
+                    <div class="d-flex justify-center w100pr mb20px mt20px0202020">
                         <img src="images/trichology/trichoscopy3.jpg" alt="Trichology">
                     </div>
                 </div>
-
                 <!-- Phototrichogramm -->
-                <div class="carousel-item">
+                <div class="carousel-item mb50px">
                     <div class="col-sm-6">
                         <div class="text-block ">
                             <div class="text-block__sub-heading__large">Фототрихограмма - это вариант цифровой
@@ -243,18 +243,16 @@
                         <img src="images/trichology/trichoscopy4.jpg" alt="Trichology" class="custom-size mt20px">
                     </div>
                 </div>
-
             </div>
+        </div>
 
 </section>
-
 
 
 <!-- 2GIS MAP -->
 <section id="contacts">
     <div id="map" style="width:100%; height:500px"></div>
 </section>
-
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
