--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Клиника Профеесора Балтабаева</title>
+    <title>Клиника Профеcсора Балтабаева</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
