--- a/app/app/index.html
+++ b/app/app/index.html
@@ -36,7 +36,7 @@
                     <li><a href="massMedia.html">О НАС</a></li>
                     <li><a href="index.html#our-services">Услуги</a></li>
                     <li><a href="index.html#ourTeam">Специалисты</a></li>
-                    <li><a href="trichology.html">Трихопология</a></li>
+                    <li><a href="trichology.html">Трихология</a></li>
                     <li><a href="#">Отзывы</a></li>
                     <li><a href="#ourTeam">Контакты</a></li>
                 </ul>
