--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Клиника Профеcсора Балтабаева</title>
+    <title>Клиника Профеесора Балтабаева</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,9 +34,15 @@
             <div class="col-md-8">
                 <ul class="nav-menu">
                     <li><a href="massMedia.html">О НАС</a></li>
-                    <li><a href="index.html#our-services">Услуги</a></li>
+                    <li class="hide-menu"><a href="index.html#our-services">Услуги</a>
+                        <ul class="nav-menu__sub-menu">
+                            <li class="nav-menu__sub-menu-item">
+                                <a href="trichology.html">Трихология</a></li>
+                            <li class="nav-menu__sub-menu-item"><a href="#">Дерматология</a></li>
+                        </ul>
+                    </li>
                     <li><a href="index.html#ourTeam">Специалисты</a></li>
-                    <li><a href="trichology.html">Трихопология</a></li>
+                    <!--<li><a href="trichology.html">ТРИХОЛОГИЯ</a></li>-->
                     <li><a href="#">Отзывы</a></li>
                     <li><a href="#ourTeam">Контакты</a></li>
                 </ul>
@@ -64,7 +70,7 @@
                 <!--<div class="text-block__sub-heading__small">DentalCare offers full range of dental services for <br>-->
                 <!--both adults and children.-->
                 <!--</div>-->
-                <button class="text-block__button">Записаться</button>
+                <a href="https://api.whatsapp.com/send?phone=996554071076" target="_blank" class="text-block__button">Записаться</a>
             </div>
         </div>
     </div>
@@ -453,7 +459,7 @@
                 <div class="team-item__inner">
                     <img src="images/Alijon.jpg" alt="worker_2" class="team-item__img">
                     <div class="team-item__name">Алижон Балтабаев</div>
-                    <div class="team-item__position">Врач-дерматолог</div>
+                    <div class="team-item__position">Врач-дерматолог-трихолог</div>
                     <!--<div class="team-item__social">-->
                     <!--<ul>-->
                     <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
@@ -534,11 +540,10 @@
     <div class="container">
         <div class="row">
             <div class="text-block col-sm-6">
-                <div class="text-block__heading"><span class="font_bold">How we can</span> </span> <span
-                        class="color_cian font_bold">Help</span>
+                <div class="text-block__heading"><span class="font_bold">Мы можем помочь</span> </span> <span
+                        class="color_cian font_bold">Вам</span>
                 </div>
-                <div class="text-block__sub-heading__large">Our doctors are able to fix any issue at no worries for you.
-                    Your smile will be perfect!
+                <div class="text-block__sub-heading__large">Наши специалисты помогут решить ваши проблемы
                 </div>
                 <button class="text-block__button">Contact us</button>
             </div>
@@ -563,7 +568,7 @@
 
                         <div class="carousel-item">
                             <div class="carousel-item__img">
-                                <img src="" alt="">
+                                <img src="images/feedback/man_1.png" alt="man">
                             </div>
 
                             <div class="carousel-item__text">Thank you so much for fitting us in today, don’t know what
@@ -577,7 +582,7 @@
 
                         <div class="carousel-item">
                             <div class="carousel-item__img">
-                                <img src="" alt="">
+                                <img src="images/feedback/woman_2.png" alt="woman">
                             </div>
 
                             <div class="carousel-item__text">Thank you so much for fitting us in today, don’t know what
@@ -591,7 +596,7 @@
 
                         <div class="carousel-item">
                             <div class="carousel-item__img">
-                                <img src="" alt="">
+                                <img src="images/feedback/woman_5.png" alt="woman">
                             </div>
 
                             <div class="carousel-item__text">Thank you so much for fitting us in today, don’t know what
@@ -644,6 +649,18 @@
 </section>-->
 
 
+<div class="send-request">
+    <div class="form">
+        <p>Оставьте ваши контакты и наш консультант свяжется с вами </p>
+        <form method="post" action="" id="formMain">
+            <input id="name" type="text" name="name" placeholder="Введите ваше имя" maxlength="30" autocomplete="off"/>
+            <input id="telephone" type="text" name="telephone" placeholder="Введите ваш телефон" maxlength="30"
+                   autocomplete="off"/>
+            <div id="messegeResult"><input class="btn" id="button" type="button" value="Отправить"
+                                           onclick="AjaxFormRequest('messegeResult', 'formMain', 'send.php')"/></div>
+        </form>
+    </div>
+</div>
 <!-- Media -->
 <section class="positive-experience">
     <div class="container">
@@ -658,7 +675,7 @@
                         <ul class="article-list">
                             <li class="article-item">
                                 <a href="massMedia/myCredoMSN.html">Мир–али–Курбан БАЛТАБАЕВ: Мое кредо – доброта и
-                                Отзывчивость</a>
+                                    Отзывчивость</a>
                             </li>
                             <li class="article-item">
                                 <a href="#">Чудо исцеления мальчика–«дерева»</a>
@@ -678,10 +695,85 @@
 <!-- Modal -->
 
 
+<section class="our-partners">
+    <div class="heading">Наши Партнёры
+    </div>
+    <div class="delimiter"></div>
+    <div class="carousel-wrapper">
+        <div class="partners-carousel">
+
+            <div class="carousel-item">
+                <div class="carousel-item__img dark-bg">
+                    <a href="https://ehrs.org/">
+                        <img src="images/partners/ehrs-ogo.png" alt="EHRS">
+                    </a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="carousel-item__img">
+                    <a href="https://rhrs.pro/">
+                        <img src="images/partners/rhrs-logo.png" alt="RHRS">
+                    </a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="carousel-item__img">
+                    <a href="https://krsu.edu.kg/index.php?option=com_content&view=article&id=90&Itemid=214&lang=ru">
+                        <img src="images/partners/krsu-logo.png" alt="KRSU">
+                    </a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="carousel-item__img">
+                    <a href="https://aqualab.kg/">
+                        <img src="images/partners/aqua-logo.png" alt="Aqua Lab">
+                    </a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="carousel-item__img">
+                    <img src="images/partners/human-lab.png" alt="Human Lab">
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
+
 <!-- 2GIS MAP -->
-<section>
+<section class="gis-map">
     <div id="map" style="width:100%; height:500px"></div>
 </section>
+
+
+<!-- Footer -->
+<section class="footer">
+    <div class="container">
+        <div class="footer-inner">
+            <ul class="nav-menu">
+                <li><a href="massMedia.html">О Нac</a></li>
+                <li class="hide-menu"><a href="index.html#our-services">Услуги</a></li>
+                <li><a href="index.html#ourTeam">Специалисты</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="#ourTeam">Контакты</a></li>
+            </ul>
+
+            <div class="contact-info">
+                <p>Адрес: 7 м-н. ул.​Юнусалиева, 173/7 - ​1 этаж</p>
+                <p>Тел.:+996 555‒31‒09‒29 </p>
+                <p>+996 706‒55‒90‒50 </p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Footer -->
 
 
 <!-- Modal Dialogs -->
@@ -850,9 +942,11 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"-->
+        <!--integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"-->
+        <!--crossorigin="anonymous"></script>-->
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
@@ -862,9 +956,32 @@
 
 
 <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
+<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-<script></script>
 <script type="text/javascript">
+    function AjaxFormRequest(result_id, formMain, url) {
+        jQuery.ajax({
+            url: url,
+            type: "POST",
+            dataType: "html",
+            data: jQuery("#" + formMain).serialize(),
+            success: function (response) {
+                document.getElementById(result_id).innerHTML = response;
+            },
+            error: function (response) {
+                document.getElementById(result_id).innerHTML = "<p>Возникла ошибка при отправке формы. Попробуйте еще раз</p>";
+            }
+        });
+
+        $(':input', '#formMain')
+            .not(':button, :submit, :reset, :hidden')
+            .val('')
+            .removeAttr('checked')
+            .removeAttr('selected');
+    }
+</script>
+
+<script>
     var map;
 
     DG.then(function () {
@@ -878,8 +995,6 @@
 
 </script>
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
 
 <!-- FeedBacks -->
 <script>
@@ -887,6 +1002,44 @@
             dots: true,
             infinite: true,
             arrows: false
+        }
+    );
+</script>
+
+
+<!-- Partners -->
+<script>
+    $('.partners-carousel').slick({
+            infinite: true,
+            arrows: false,
+            autoplay: true,
+            speed: 1000,
+            autoplaySpeed: 2000,
+
+            responsive: [
+                {
+                    breakpoint: 1920,
+                    settings: {
+                        slidesToShow: 3,
+                        infinite: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1
+                    }
+                }
+                // You can unslick at a given breakpoint now by adding:
+                // settings: "unslick"
+                // instead of a settings object
+            ]
         }
     );
 </script>
