--- a/app/massMedia/myCredoMSN.html
+++ b/app/massMedia/myCredoMSN.html
@@ -32,7 +32,13 @@
             <div class="col-md-8">
                 <ul class="nav-menu">
                     <li><a href="#aboutUs">О НАС</a></li>
-                    <li><a href="#our-services">Услуги</a></li>
+                    <li class="hide-menu"><a href="index.html#our-services">Услуги</a>
+                        <ul class="nav-menu__sub-menu">
+                            <li class="nav-menu__sub-menu-item">
+                                <a href="trichology.html">Трихология</a></li>
+                            <li class="nav-menu__sub-menu-item"><a href="#">Дерматология</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#ourTeam">Специалисты</a></li>
                     <li><a href="#trichology">Трихопология</a></li>
                     <li><a href="#">Отзывы</a></li>
